--- a/BlogposterCMS/apps/designer/partials/builder/publish-panel.html
+++ b/BlogposterCMS/apps/designer/partials/builder/publish-panel.html
@@ -5,6 +5,7 @@
     <span class="slug-prefix" aria-hidden="true">/</span>
     <input type="text" class="publish-slug-input" />
   </div>
+  <div class="publish-url hidden"></div>
 </label>
 <div class="publish-suggestions builder-options-menu"></div>
 <div class="publish-warning hidden"></div>
