--- a/BlogposterCMS/apps/designer/assets/scss/_layout-root.scss
+++ b/BlogposterCMS/apps/designer/assets/scss/_layout-root.scss
@@ -1,4 +1,6 @@
 #layoutRoot {
+  position: absolute;
+  inset: 0;
   display: flex;
   min-height: 100%;
 }
@@ -7,7 +9,7 @@
   flex: 1 1 0;
 }
 
-#builderGrid {
+.layout-container > .builder-grid {
   width: 100%;
   height: 100%;
 }
